Commentary and style changes.

--- a/src/node/testServer/public/spa.html
+++ b/src/node/testServer/public/spa.html
@@ -26,6 +26,11 @@
 		font-style: italic;
 		cursor: pointer;
 	}
+
+	/* Make editor controls more prominent. */
+	#jkjs-editor {
+		font-size: 120%;
+	}
 	</style>
 	</head>
 
